fix alignment viewer

--- a/app/assets/stylesheets/alignment/_alignment.scss
+++ b/app/assets/stylesheets/alignment/_alignment.scss
@@ -1,4 +1,4 @@
 .alignment-wrap {
   display: block;
-  background-color: red;
+  
 }
